# geolibre-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  index.html
.github/workflows/: ci.yml  docker.yml  pages-preview.yml  pages.yml  release.yml
crates/geolibre-cli/: Cargo.toml
crates/geolibre-cli/src/: main.rs
crates/geolibre-pmtiles/: Cargo.toml
crates/geolibre-pmtiles/src/: extract.rs  format.rs  lib.rs  tilemath.rs  writer.rs
crates/geolibre-tools/: Cargo.toml
crates/geolibre-tools/src/: add_surface_information.rs  adjust_3d_z.rs  aggregate_points.rs  aggregate_polygons.rs  align_features.rs  analyze_changes_ccdc.rs  apportion_polygon.rs  assign_projection.rs  attribute_uncertainty.rs  band_collection_statistics.rs  bivariate_spatial_association.rs  boundary_clean.rs  build_balanced_zones.rs  calculate_adjacent_fields.rs  calculate_composite_index.rs  calculate_distance_band.rs  calculate_grid_convergence_angle.rs  calculate_motion_statistics.rs  calculate_polygon_main_angle.rs  calculate_rates.rs  calculate_transit_service_frequency.rs  calculate_utm_zone.rs  cartogram.rs  causal_inference_analysis.rs  cell_records_to_sectors.rs  cell_statistics.rs  central_feature.rs  change_point_detection.rs  classification_accuracy_assessment.rs  collapse_dual_lines_to_centerline.rs  collapse_hydro_polygon.rs  collapse_road_detail.rs  collect_events.rs  colocation_analysis.rs  color_polygons.rs  combine.rs  common.rs  compare_spatial_weights.rs  contour_with_barriers.rs  convert_coordinate_notation.rs  (+193 more)
crates/geolibre-wasm/: Cargo.toml
crates/geolibre-wasm/src/: lib.rs  pmtiles.rs
demo/: index.html  serve.sh
docker/: nginx.conf
examples/: geolibre_wasm.ipynb  node-demo.mjs
npm/: README.md  package.json  tools.d.ts  tools.mjs
pr-preview/pr-101/: index.html
pr-preview/pr-114/: index.html
pr-preview/pr-137/: index.html
pr-preview/pr-173/: index.html
pr-preview/pr-174/: index.html
pr-preview/pr-175/: index.html
pr-preview/pr-176/: index.html
pr-preview/pr-177/: index.html
pr-preview/pr-178/: index.html
pr-preview/pr-179/: index.html
pr-preview/pr-180/: index.html
pr-preview/pr-181/: index.html
pr-preview/pr-182/: index.html
pr-preview/pr-183/: index.html
pr-preview/pr-184/: index.html
pr-preview/pr-185/: index.html
pr-preview/pr-186/: index.html
pr-preview/pr-187/: index.html
pr-preview/pr-188/: index.html
pr-preview/pr-189/: index.html
pr-preview/pr-190/: index.html
pr-preview/pr-191/: index.html
pr-preview/pr-192/: index.html
pr-preview/pr-193/: index.html
pr-preview/pr-218/: index.html
pr-preview/pr-219/: index.html
pr-preview/pr-220/: index.html
pr-preview/pr-221/: index.html
pr-preview/pr-222/: index.html
pr-preview/pr-223/: index.html
pr-preview/pr-224/: index.html
pr-preview/pr-225/: index.html
pr-preview/pr-226/: index.html
pr-preview/pr-227/: index.html
pr-preview/pr-228/: index.html
pr-preview/pr-229/: index.html
pr-preview/pr-230/: index.html
pr-preview/pr-231/: index.html
pr-preview/pr-232/: index.html
pr-preview/pr-233/: index.html
pr-preview/pr-234/: index.html
pr-preview/pr-235/: index.html
pr-preview/pr-236/: index.html
pr-preview/pr-237/: index.html
pr-preview/pr-238/: index.html
pr-preview/pr-239/: index.html
pr-preview/pr-256/: index.html
pr-preview/pr-257/: index.html
pr-preview/pr-258/: index.html
pr-preview/pr-259/: index.html
pr-preview/pr-260/: index.html
pr-preview/pr-261/: index.html
pr-preview/pr-262/: index.html
pr-preview/pr-263/: index.html
pr-preview/pr-264/: index.html
pr-preview/pr-265/: index.html
pr-preview/pr-266/: index.html
pr-preview/pr-267/: index.html
pr-preview/pr-268/: index.html
pr-preview/pr-269/: index.html
pr-preview/pr-270/: index.html
pr-preview/pr-280/: index.html
pr-preview/pr-281/: index.html
pr-preview/pr-282/: index.html
pr-preview/pr-283/: index.html
pr-preview/pr-284/: index.html
pr-preview/pr-285/: index.html
pr-preview/pr-286/: index.html
pr-preview/pr-287/: index.html
pr-preview/pr-292/: index.html
pr-preview/pr-328/: index.html
pr-preview/pr-329/: index.html
pr-preview/pr-330/: index.html
pr-preview/pr-331/: index.html
pr-preview/pr-332/: index.html
pr-preview/pr-333/: index.html
pr-preview/pr-334/: index.html
pr-preview/pr-335/: index.html
pr-preview/pr-336/: index.html
pr-preview/pr-337/: index.html
pr-preview/pr-338/: index.html
pr-preview/pr-339/: index.html
pr-preview/pr-340/: index.html
pr-preview/pr-341/: index.html
pr-preview/pr-342/: index.html
pr-preview/pr-343/: index.html
pr-preview/pr-344/: index.html
pr-preview/pr-345/: index.html
pr-preview/pr-346/: index.html
pr-preview/pr-347/: index.html
pr-preview/pr-348/: index.html
pr-preview/pr-349/: index.html
pr-preview/pr-350/: index.html
pr-preview/pr-351/: index.html
pr-preview/pr-352/: index.html
pr-preview/pr-353/: index.html
pr-preview/pr-354/: index.html
pr-preview/pr-355/: index.html
pr-preview/pr-356/: index.html
pr-preview/pr-357/: index.html
pr-preview/pr-358/: index.html
pr-preview/pr-359/: index.html
pr-preview/pr-360/: index.html
pr-preview/pr-361/: index.html
pr-preview/pr-362/: index.html
pr-preview/pr-380/: index.html
pr-preview/pr-381/: index.html
pr-preview/pr-382/: index.html
pr-preview/pr-383/: index.html
pr-preview/pr-384/: index.html
pr-preview/pr-385/: index.html
pr-preview/pr-386/: index.html
pr-preview/pr-387/: index.html
pr-preview/pr-388/: index.html
pr-preview/pr-389/: index.html
pr-preview/pr-390/: index.html
pr-preview/pr-391/: index.html
pr-preview/pr-392/: index.html
pr-preview/pr-393/: index.html
pr-preview/pr-394/: index.html
pr-preview/pr-395/: geolibre_wasm.js  index.html
pr-preview/pr-396/: index.html
pr-preview/pr-403/: index.html
pr-preview/pr-404/: index.html
pr-preview/pr-405/: index.html
python/: README.md  pyproject.toml
python/src/geolibre_wasm/: __init__.py  _core.py
python/tests/: test_smoke.py
(+16 files in other folders)
