[workspace]
members = [
    "crates/geolibre-cli",
    "crates/geolibre-pmtiles",
    "crates/geolibre-tools",
    "crates/geolibre-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/opengeos/geolibre-rust"

# Size-optimized WASM build. Mirrors opengeos/whitebox-wasm so the resulting
# wasm32-wasip1 artifact stays small enough to ship to the browser.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
