[package]
name = "geolibre-cli"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASI command-line runner for the whitebox_next_gen geospatial tool suite, built for GeoLibre's in-browser WASM execution."

[[bin]]
name = "geolibre"
path = "src/main.rs"

[dependencies]
# Built on opengeos/whitebox-wasm: the WASM-ready fork of whitebox_next_gen with
# byte-buffer / COG-streaming APIs and a WASI-compatible build. wbtools_oss is
# `publish = false`, so a git (or path) dependency is required.
wbcore = { git = "https://github.com/opengeos/whitebox-wasm" }
wbtools_oss = { git = "https://github.com/opengeos/whitebox-wasm" }
geolibre-tools = { path = "../geolibre-tools" }

serde_json = "1"
