[package]
name = "geolibre-pmtiles"
version = "0.10.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sans-IO PMTiles v3 read/write/extract core shared by GeoLibre's WASM, WASI, and native bindings."

[dependencies]
# Pure-Rust gzip (miniz_oxide backend) for PMTiles internal compression
# (directories + metadata). Same dep geolibre-tools already uses; compiles to
# both wasm32-unknown-unknown and wasm32-wasip1.
flate2 = "1"
