[package]
name = "geolibre-tools"
version = "0.4.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "New geospatial tools that extend the whitebox_next_gen suite, surfaced in GeoLibre via WASM."

[dependencies]
# Depend only on wbcore (the Tool trait + types) and the data crates a given
# tool needs. Staying off wbtools_oss keeps this crate reusable for other
# bindings (native CLI, Python sidecar) and avoids any dependency cycle.
# Built on opengeos/whitebox-wasm; see geolibre-cli/Cargo.toml.
wbcore = { git = "https://github.com/opengeos/whitebox-wasm" }
wbraster = { git = "https://github.com/opengeos/whitebox-wasm" }
# GeoParquet read/write lives behind wbvector's `geoparquet` feature.
wbvector = { git = "https://github.com/opengeos/whitebox-wasm", features = ["geoparquet"] }
# Pulled in transitively by wbvector's geoparquet feature; named directly so the
# GeoParquet tools can choose the compression codec (ZSTD by default).
parquet = "58.3"

serde_json = "1"
# Pure-Rust PNG encoder (miniz_oxide backend), used by render_raster_png and
# raster_to_tiles. Compiles cleanly to wasm32-wasip1.
png = "0.17"
# Pure-Rust gzip (miniz_oxide backend) for the PMTiles directory + metadata.
flate2 = "1"
