[package]
name = "geolibre-tools"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "New geospatial tools that extend the whitebox_next_gen suite, surfaced in GeoLibre via WASM."

[dependencies]
# Depend only on wbcore (the Tool trait + types) and the data crates a given
# tool needs. Staying off wbtools_oss keeps this crate reusable for other
# bindings (native CLI, Python sidecar) and avoids any dependency cycle.
# Built on opengeos/whitebox-wasm; see geolibre-cli/Cargo.toml.
wbcore = { git = "https://github.com/opengeos/whitebox-wasm" }
wbraster = { git = "https://github.com/opengeos/whitebox-wasm" }
# GeoParquet read/write lives behind wbvector's `geoparquet` feature.
wbvector = { git = "https://github.com/opengeos/whitebox-wasm", features = ["geoparquet"] }
# LAS/LAZ/COPC point-cloud I/O for the LiDAR assign-projection tool.
wblidar = { git = "https://github.com/opengeos/whitebox-wasm" }
# Pulled in transitively by wbvector's geoparquet feature; named directly so the
# GeoParquet tools can choose the compression codec (ZSTD by default).
parquet = "58.3"

# Shared PMTiles v3 core (format, writer, bbox extract); also consumed by
# geolibre-wasm directly, which is why it is its own lightweight crate.
geolibre-pmtiles = { path = "../geolibre-pmtiles" }

# Vector tiling engine (clip, simplify, quantize, MVT encode) behind
# vector_to_pmtiles. Points at a fork because upstream pins rayon `=1.10.0` and
# geo 0.29, neither of which can resolve alongside wbraster or our geo 0.33; the
# fork drops those pins. Upstream keeps them for CRAN's Rust 1.77.2 checks, so
# the change is not upstreamable. Pinned to a rev rather than the fork's
# `fix/geo-0.33-wasm-compat` branch so the tiler cannot drift under us. Default
# features only: `duckdb`/`geoparquet` would pull bundled C++ and arrow, which
# do not belong in the wasm build.
freestiler-core = { git = "https://github.com/giswqs/freestiler", rev = "b77f7f0d76e11bf105e913ab6d553eb2a4a7ca00", default-features = false }

serde_json = "1"
# Pure-Rust PNG encoder (miniz_oxide backend), used by render_raster_png and
# raster_to_tiles. Compiles cleanly to wasm32-wasip1.
png = "0.17"
# Pure-Rust gzip (miniz_oxide backend) for the PMTiles directory + metadata.
flate2 = "1"
# Pure-Rust H3 (no C deps); powers the vector_to_h3 / h3_to_vector / h3_polyfill
# DGGS tools. Verified to compile for both wasm32-unknown-unknown and
# wasm32-wasip1. The `geo` feature pulls the pure-Rust `geo` crate and enables
# the polygon tiler (h3o::geom) used by h3_polyfill.
h3o = { version = "0.10.0", features = ["geo"] }
# Geometry types for building polygons handed to h3o's tiler. Pinned to the same
# minor `geo` uses internally so the `geo::Polygon` types unify (no duplicate
# geo crate in the graph). Pure Rust, compiles to the wasm targets.
geo = { version = "0.33", default-features = false }
# Pure-Rust EXIF/TIFF-IFD metadata parser (no C deps, no image decoding),
# used by geotagged_photos_to_points to read GPS + datetime + camera tags from
# photo headers. WASM-clean. Crate name `kamadak-exif`, imported as `exif`.
exif = { package = "kamadak-exif", version = "0.6.1" }
# 1-D/2-D nearest-neighbour search (propensity-score caliper matching and
# spatial-confounder neighbour averaging in causal_inference_analysis).
# Redirected to the workspace's vendored copy by the root `[patch.crates-io]`
# (see root Cargo.toml) which fixes kdtree 0.8.0's wasm-breaking `criterion`
# normal-dependency packaging bug.
kdtree = "0.8"
